force-app/main/default/objects/Hearing__c/fields/Meeting_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Outcome__c</fullName>
    <description>Defines the outcomes available for a meeting.</description>
    <label>Meeting Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Settled Before Conference</fullName>
            </value>
            <value>
                <fullName>Settled at Conference</fullName>
            </value>
            <value>
                <fullName>Referred to Hearing - no settlement</fullName>
            </value>
            <value>
                <fullName>Referred to Hearing - Claimant only appeared</fullName>
            </value>
            <value>
                <fullName>Dismissed - Claimant Withdrew</fullName>
            </value>
            <value>
                <fullName>Dismissed - Claimant did not appear</fullName>
            </value>
            <value>
                <fullName>Dismissed - No jurisdiction</fullName>
            </value>
            <value>
                <fullName>Legacy - Dismissed</fullName>
            </value>
            <value>
                <fullName>Legacy - Referral</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Settled at Hearing</fullName>
            </value>
            <value>
                <fullName>Hearing Held-No Settlement</fullName>
            </value>
            <value>
                <fullName>Settled Post-Conference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>