force-app/main/default/objects/Hearing__c/fields/Meeting_Outcome_Other_Text__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Outcome_Other_Text__c</fullName>
    <label>Meeting Outcome Other Text</label>
    <type>TextArea</type>
</CustomField>