force-app/main/default/objects/Hearing__c/fields/Meeting_Scheduled_for_Name__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Scheduled_for_Name__c</fullName>
    <formula>Meeting_Scheduled_For__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Scheduled for Name</label>
    <type>Text</type>
</CustomField>