force-app/main/default/objects/Hearing__c/fields/Meeting_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Start_Date_Time__c</fullName>
    <label>Meeting Start Date/Time</label>
    <type>DateTime</type>
</CustomField>