force-app/main/default/objects/Hearing__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <description>Serves as a sub-type of the rec type on the meeting.</description>
    <inlineHelpText>Select the type of meeting if it applies</inlineHelpText>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Order to Show Cause</fullName>
            </value>
            <value>
                <fullName>Order to Appear</fullName>
            </value>
            <value>
                <fullName>98(f)</fullName>
            </value>
            <value>
                <fullName>Berman Hearing</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>BOFE Hearing</fullName>
            </value>
            <value>
                <fullName>Subpoena</fullName>
            </value>
            <value>
                <fullName>Witness Prep</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>Meet and Confer</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Rebuttal</fullName>
            </value>
            <value>
                <fullName>Closing conference</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>H&amp;S</fullName>
            </value>
            <value>
                <fullName>LC Ordered</fullName>
            </value>
            <value>
                <fullName>DIR Ordered</fullName>
            </value>
            <value>
                <fullName>Sr. Ordered</fullName>
            </value>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Phone Claimant</fullName>
            </value>
            <value>
                <fullName>Phone Defendant</fullName>
            </value>
            <value>
                <fullName>Phone Claimant representative</fullName>
            </value>
            <value>
                <fullName>Phone Defendant representative</fullName>
            </value>
            <value>
                <fullName>Phone other</fullName>
            </value>
            <value>
                <fullName>Phone interview Claimant</fullName>
            </value>
            <value>
                <fullName>Phone interview Defendant</fullName>
            </value>
            <value>
                <fullName>Phone interview witness</fullName>
            </value>
            <value>
                <fullName>Phone interview other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>