force-app/main/default/objects/Hearing__c/fields/Method_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Service__c</fullName>
    <description>Field to capture how the forms were sent via certified mail or service by mail; for the WCA 66 output.</description>
    <label>Method of Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Class</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>First Class and Certified</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>