force-app/main/default/objects/Hearing__c/fields/Number_of_Days_to_Hearing__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_to_Hearing__c</fullName>
    <description>Formula to calculate the difference between the Date if Docket on a Case and the Start Date/Time of a conference.</description>
    <formula>If(CONTAINS(RecordType.DeveloperName, &quot;Hearing&quot;),(DATEVALUE(Meeting_Start_Date_Time__c ) - (Case__r.Date_of_Docket__c )),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days to Hearing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>