force-app/main/default/objects/Hearing__c/fields/Number_of_Days_to_Transmittal__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_to_Transmittal__c</fullName>
    <description>Formula to calculate difference between Date of Docket on Case and Created Date on Meeting record.</description>
    <formula>IF(Imported_From__c  &lt;&gt; &quot;&quot; &amp;&amp;  !ISBLANK(Case__r.Legacy_Transmittal_Date__c), Case__r.Legacy_Transmittal_Date__c - Case__r.Date_of_Docket__c,

IF(Imported_From__c  &lt;&gt; &quot;&quot; &amp;&amp; ISBLANK(Case__r.Legacy_Transmittal_Date__c), DATEVALUE(Meeting_Start_Date_Time__c)  - Case__r.Date_of_Docket__c , DATEVALUE(CreatedDate ) - Case__r.Date_of_Docket__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days to Transmittal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>