force-app/main/default/objects/Hearing__c/fields/Office_of_Hearing_Officer__c.field-meta.xml
<CustomField>
    <fullName>Office_of_Hearing_Officer__c</fullName>
    <description>To hold the office of the Hearing Officer (meeting held by) deputy.</description>
    <formula>Hearing_Officer_Employee__r.Office_Name__c</formula>
    <label>Office of Hearing Officer</label>
    <type>Text</type>
</CustomField>