force-app/main/default/objects/Hearing__c/fields/Scheduled_Beyond_120__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Beyond_120__c</fullName>
    <description>Formula to examine Number of Days to Hearing field and determine if it &gt; 120</description>
    <formula>( Number_of_Days_to_Hearing__c &gt; 120 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Beyond 120</label>
    <type>Checkbox</type>
</CustomField>