force-app/main/default/objects/Hearing__c/fields/Secondary_Subsequent__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Subsequent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows the meeting to be defined as non-primary, specifically for reporting/statistical purposes</description>
    <inlineHelpText>If the meeting is a followup, indicate so by checking this box.</inlineHelpText>
    <label>Secondary/Subsequent</label>
    <type>Checkbox</type>
</CustomField>