force-app/main/default/objects/Hearing__c/fields/sfxId__c.field-meta.xml
<CustomField>
    <fullName>sfxId__c</fullName>
    <externalId>true</externalId>
    <label>sfxId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>