force-app/main/default/objects/Hearing__c/fields/Signed_by_LC__c.field-meta.xml
<CustomField>
    <fullName>Signed_by_LC__c</fullName>
    <label>Signed by LC</label>
    <type>Date</type>
</CustomField>