force-app/main/default/objects/Hearing__c/fields/Spanish_Date__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Date__c</fullName>
    <formula>Text(DAY( TODAY() ))+&#39; &#39;+
CASE( MONTH( TODAY() ),
1, &quot;Enero&quot;,
2, &quot;Febrero&quot;,
3, &quot;Marzo&quot;,
4, &quot;Abril&quot;,
5, &quot;Mayo&quot;,
6, &quot;Junio&quot;,
7, &quot;Julio&quot;,
8, &quot;Agosto&quot;,
9, &quot;Septiembre&quot;,
10, &quot;Octubre&quot;,
11, &quot;Noviembre&quot;,
&quot;Diciembre&quot;)
+&#39; &#39;+ Text(YEAR( TODAY() ))</formula>
    <label>Spanish Date</label>
    <type>Text</type>
</CustomField>