force-app/main/default/objects/Hearing__c/fields/Sr_Case_Deputy__c.field-meta.xml
<CustomField>
    <fullName>Sr_Case_Deputy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to store the User ID of the Sr. Deputy on the case. Not on the page layout.</description>
    <label>Sr. Case Deputy User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Meetings1</relationshipName>
    <type>Lookup</type>
</CustomField>