force-app/main/default/objects/Hearing__c/fields/Sr_Meeting_Held_By__c.field-meta.xml
<CustomField>
    <fullName>Sr_Meeting_Held_By__c</fullName>
    <description>Formula to insert the Senior of the Hearing Officer (meeting held by)</description>
    <formula>Hearing_Officer_Employee__r.Manager__r.Name</formula>
    <label>Sr. Meeting Held By</label>
    <type>Text</type>
</CustomField>