force-app/main/default/objects/Hearing__c/fields/WCA_Office__c.field-meta.xml
<CustomField>
    <fullName>WCA_Office__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Office where meeting is to take place</description>
    <inlineHelpText>Office where meeting is to take place</inlineHelpText>
    <label>Meeting Location (Office)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Office__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>WCA,Garment,BOFE,RCI</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Hearings</relationshipName>
    <type>Lookup</type>
</CustomField>