force-app/main/default/objects/Hearing__c/fields/X2810_4_Outcome__c.field-meta.xml
<CustomField>
    <fullName>X2810_4_Outcome__c</fullName>
    <label>2810.4 Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affirmed on list</fullName>
            </value>
            <value>
                <fullName>Remove from list</fullName>
            </value>
            <value>
                <fullName>Appeal withdrawn/dismissed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>