force-app/main/default/objects/Hearing__c/recordTypes/BOFE_Hearing.recordType-meta.xml
<RecordType>
    <fullName>BOFE_Hearing</fullName>
    <active>true</active>
    <label>BOFE Hearing</label>
</RecordType>