force-app/main/default/objects/Hearing__c/recordTypes/Garment_Conference.recordType-meta.xml
<RecordType>
    <fullName>Garment_Conference</fullName>
    <active>true</active>
    <label>Garment Conference</label>
</RecordType>