force-app/main/default/objects/Hearing__c/recordTypes/Garment_Revocation_Hearing.recordType-meta.xml
<RecordType>
    <fullName>Garment_Revocation_Hearing</fullName>
    <active>true</active>
    <label>Garment Revocation Hearing</label>
</RecordType>