force-app/main/default/objects/Hearing__c/recordTypes/Legal_Court.recordType-meta.xml
<RecordType>
    <fullName>Legal_Court</fullName>
    <active>true</active>
    <label>Legal/Court</label>
</RecordType>