force-app/main/default/objects/Hearing__c/recordTypes/Paid_Pre_Hearing.recordType-meta.xml
<RecordType>
    <fullName>Paid_Pre_Hearing</fullName>
    <active>true</active>
    <label>Paid Pre-Hearing</label>
</RecordType>