force-app/main/default/objects/Hearing__c/recordTypes/RCI_Hearing.recordType-meta.xml
<RecordType>
    <fullName>RCI_Hearing</fullName>
    <active>true</active>
    <label>RCI Hearing</label>
</RecordType>