force-app/main/default/objects/Hearing__c/recordTypes/RCI_Meeting.recordType-meta.xml
<RecordType>
    <fullName>RCI_Meeting</fullName>
    <active>true</active>
    <label>RCI Meeting</label>
</RecordType>