force-app/main/default/objects/Hearing__c/recordTypes/Registration_Conference.recordType-meta.xml
<RecordType>
    <fullName>Registration_Conference</fullName>
    <active>true</active>
    <label>Registration Conference</label>
</RecordType>