force-app/main/default/objects/Hearing__c/recordTypes/Registration_Hearing.recordType-meta.xml
<RecordType>
    <fullName>Registration_Hearing</fullName>
    <active>true</active>
    <label>Registration Hearing</label>
</RecordType>