force-app/main/default/objects/Hearing__c/recordTypes/Remedial_Fast_Track.recordType-meta.xml
<RecordType>
    <fullName>Remedial_Fast_Track</fullName>
    <active>true</active>
    <description>Used for collecting all details in order to refer a fast track case</description>
    <label>Remedial Fast Track</label>
</RecordType>