force-app/main/default/objects/Hearing__c/recordTypes/WCA_Conference.recordType-meta.xml
<RecordType>
    <fullName>WCA_Conference</fullName>
    <active>true</active>
    <label>Conference</label>
</RecordType>