force-app/main/default/objects/Hearing__c/recordTypes/WCA_Garment_Subpoena.recordType-meta.xml
<RecordType>
    <fullName>WCA_Garment_Subpoena</fullName>
    <active>true</active>
    <label>Subpoena</label>
</RecordType>