force-app/main/default/objects/Hearing__c/recordTypes/WCA_Hearing.recordType-meta.xml
<RecordType>
    <fullName>WCA_Hearing</fullName>
    <active>true</active>
    <label>WCA Hearing</label>
</RecordType>