force-app/main/default/objects/Hearing__c/validationRules/Estimated_Duration_Not_More_Than_14_Days.validationRule-meta.xml
<ValidationRule>
    <fullName>Estimated_Duration_Not_More_Than_14_Days</fullName>
    <active>true</active>
    <description>Estimated Duration cannot be more than 20160 hours (14 days) because a flow subsequently creates an Event, and Events cannot be more than 14 days long.</description>
    <errorConditionFormula>Estimated_Duration__c &gt; 20160</errorConditionFormula>
    <errorMessage>Estimated Duration cannot be greater than 20,160 minutes (14 days)</errorMessage>
</ValidationRule>