force-app/main/default/objects/Hearing__c/validationRules/Meeting_End_must_be_after_Meeting_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Meeting_End_must_be_after_Meeting_Start</fullName>
    <active>true</active>
    <description>Meeting End Date/Time must be after Meeting Start Date/Time</description>
    <errorConditionFormula>Meeting_End_Date_Time__c &lt;= Meeting_Start_Date_Time__c</errorConditionFormula>
    <errorMessage>Meeting End Date/Time must be after Meeting Start Date/Time</errorMessage>
</ValidationRule>