force-app/main/default/objects/Hearing__c/validationRules/Meeting_Rescheduled_cannot_be_scheduled.validationRule-meta.xml
<ValidationRule>
    <fullName>Meeting_Rescheduled_cannot_be_scheduled</fullName>
    <active>false</active>
    <description>Prevents a meeting that has been rescheduled to be set back to scheduled</description>
    <errorConditionFormula>RecordType.DeveloperName &lt;&gt; &#39;BOFE_Hearing&#39; &amp;&amp; 
ISCHANGED ( Status__c ) &amp;&amp; 
ISPICKVAL ( Status__c, &#39;Scheduled&#39; ) &amp;&amp;
ISPICKVAL ( PRIORVALUE ( Status__c) , &#39;Rescheduled&#39; )</errorConditionFormula>
    <errorMessage>A meeting that has been rescheduled cannot be set back to Scheduled status.</errorMessage>
</ValidationRule>