force-app/main/default/objects/Hearing__c/validationRules/RCI_Meeting_Hearing_Scheduled_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>RCI_Meeting_Hearing_Scheduled_Status</fullName>
    <active>true</active>
    <description>In order to change status to Scheduled, user must provide Start date/time and update who the meeting is for.</description>
    <errorConditionFormula>AND(OR((RecordType.Name=&quot;RCI Meeting&quot;),(RecordType.Name=&quot;RCI Hearing&quot;)),
ISPICKVAL(Status__c,&quot;Scheduled&quot;),
OR(ISNULL(Meeting_Start_Date_Time__c), 
ISBLANK( Meeting_Scheduled_For__c )))</errorConditionFormula>
    <errorMessage>Please provide the Meeting Start Date and who the Meeting is For before marking as Scheduled.</errorMessage>
</ValidationRule>