force-app/main/default/objects/Hearing__c/validationRules/Req_Status_rescheduled.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_Status_rescheduled</fullName>
    <active>false</active>
    <description>Requires that the status be changed to &quot;rescheduled&quot; if the start date/time or the estimated duration is changed on a meeting that is currently scheduled.</description>
    <errorConditionFormula>RecordType.DeveloperName &lt;&gt; &#39;BOFE_Hearing&#39; &amp;&amp;
!ISCHANGED (  Status__c ) &amp;&amp; 
ISPICKVAL ( Status__c, &#39;Scheduled&#39; ) &amp;&amp; 
(
  ISCHANGED (  Meeting_Start_Date_Time__c ) ||
  ISCHANGED (  Estimated_Duration__c )
)</errorConditionFormula>
    <errorMessage>You must change the status to &quot;rescheduled&quot; in order to change the start time or estimated duration of the meeting.</errorMessage>
</ValidationRule>