force-app/main/default/objects/Hearing__c/validationRules/Require_Length_of_Hearing.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Length_of_Hearing</fullName>
    <active>true</active>
    <description>Requires the Length of the hearing when hearing is marked complete.</description>
    <errorConditionFormula>ISPICKVAL (Status__c, &quot;Complete&quot;) &amp;&amp; OR(ISBLANK( Length_of_Hearing__c), (Length_of_Hearing__c  =  0))&amp;&amp; (Record_Type_Name__c &lt;&gt; &quot;BOFE Hearing&quot;)</errorConditionFormula>
    <errorDisplayField>Length_of_Hearing__c</errorDisplayField>
    <errorMessage>You must enter the length of the hearing before completing the hearing results.</errorMessage>
</ValidationRule>