force-app/main/default/objects/Hearing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>WCA_Office__c</columns>
    <columns>Meeting_Type__c</columns>
    <columns>Meeting_Start_Date_Time__c</columns>
    <columns>Meeting_End_Date_Time__c</columns>
    <columns>Courthouse__c</columns>
    <columns>Hearing_Officer__c</columns>
    <columns>Length_of_Hearing__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>