force-app/main/default/objects/Hearing__c/listViews/All_Unscheduled_Wage_Hearings.listView-meta.xml
<ListView>
    <fullName>All_Unscheduled_Wage_Hearings</fullName>
    <columns>NAME</columns>
    <columns>Case_Number__c</columns>
    <columns>Case_Employer__c</columns>
    <columns>Length_of_Hearing__c</columns>
    <columns>Meeting_Scheduled_For__c</columns>
    <columns>Meeting_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Imported_From__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Hearing__c.WCA_Hearing,Hearing__c.Garment_Hearing,Hearing__c.Garment_Revocation_Hearing</value>
    </filters>
    <filters>
        <field>Meeting_Start_Date_Time__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Unscheduled Wage Hearings</label>
</ListView>